# LLM_Personas

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  Customizing Agents in CrewAI - crewAI.md  MODELCARD.md  README.md  SECURITY.md  architecture-overview.md  index.html  pyproject.toml  requirements.txt
aegis_core/: README.md  state.md
agents/: README.md  aegis-protocol.md  morningstar.md  octavius.md
backend/: README.md  package.json  server.js
checklists/: README.md  aegis-protocol.md  courtroom-scribe.md  critibot-review.md  judge-morningstar.md  octavius.md
core/: case-format.md  error-recovery.md  inter-agent-protocol.md  personalities.md  procedures.md  sme-framework.md  state-schema.md
courtroom/: BEST_PRACTICES.md  RULES.md  precedents.md  reporter.py  spectators.md
docs/: ONBOARDING.md  RUNBOOK.md  agent-schema.md  agent-skills.md  agent-structure-investigation.md  court-reporter.md  edge-cases.md  glossary.md  morningstar-inventory-phase2-4.md
executive/: watchdog.py
litigation/: README.md  config.example.yaml  launch.sh  models.py  prompts.py  requirements.txt  run.py  ui.py
octavius_core/: THE_RULES.md  state.md
portal/: README.md  generate.py  generate_manifest.py  transcripts_manifest.json  viewer.html
reference_files/: personalities.md
references/: naming-conventions.md
state/: current.md  metrics.md  sme-failures.md
templates/: contempt-hearing.md  module-template.md  project-dashboard.md  session-start.md  special-interest-hearing.md
tests/: conftest.py  test_consensus.py  test_court_reporter.py  (+20 more)
(+114 files in other folders)
